Prevent flash of white if browser is set to dark mode when waiting for React

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -50,9 +50,13 @@ $phone-port: 450px;
         html[data-theme='dark'] & {
             @content;
         }
-        /* @media (prefers-color-scheme: dark) {
-            @content;
-        } */
+
+        //Prevent flash of white while waiting for React
+        @media (prefers-color-scheme: dark) {
+            html:not([data-theme]) & {
+                @content;
+            }
+        }
     }
 }
 
